--- a/wiki/%E6%AD%A6.wikitext
+++ b/wiki/%E6%AD%A6.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#military
-*# martial, warlike
+*# [[military]]
+*# [[martial]], [[warlike]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,73 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mou5
 
+===Compounds===
+*[[武备]]
+*[[武昌起义]]
+*[[武打]]
+*[[武旦]]
+*[[武断]]
+*[[武夫]]
+*[[武工队]]
+*[[武功]]
+*[[武功片]]
+*[[武官]]
+*[[武火]]
+*[[武将]]
+*[[武警]]
+*[[武科]]
+*[[武库]]
+*[[武力]]
+*[[武林]]
+*[[武庙]]
+*[[武器]]
+*[[武人]]
+*[[武生]]
+*[[武师]]
+*[[武士]]
+*[[武术]]
+*[[武坛]]
+*[[武戏]]
+*[[武侠]]
+*[[武仙座]]
+*[[武艺]]
+*[[武职]]
+*[[武装]]
+*[[武装部队]]
+*[[武装警察]]
+*[[武装力量]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぶ]] (bu), [[む]] (mu)
 ** '''[[Kun]]''': [[たけし]] (takeshi)
+
+===Compounds===
+*[[武威]]
+*[[武運]]
+*[[武官]]
+*[[武器]]
+*[[武技]]
+*[[武具]]
+*[[武勲]]
+*[[武家]]
+*[[武芸]]
+*[[武士]]
+*[[武士道]]
+*[[武者]]
+*[[武術]]
+*[[武将]]
+*[[武人]]
+*[[武神]]
+*[[武装]]
+*[[武道]]
+*[[武勇]]
+*[[武力]]
 
 * '''Other info''':  
 
