--- a/wiki/fill.wikitext
+++ b/wiki/fill.wikitext
@@ -24,10 +24,14 @@
 *French: [[remplir]]
 *German: [[füllen]]
 *Greek: [[γεμίσει]]
+*Hebrew:[[:he:למלא|למלא]] 
 *Hindi: [[भरना]] (bharanā)<!-- i also see bharnaa -->
-*Italian: [[riempirsi]]
+*Italian: [[:it:riempirsi|riempirsi]]
 *[[Pitjantjatjara]]: [[angaṉi]]
 *Portuguese: [[encher]]
-*Russian: [[заполнить]] (zapolnit')
-*Spanish: [[llenar]]
+*Russian: [[:ru:заполнить|заполнить]] (zapolnit')
+*Spanish: [[:es:llenar|llenar]]
 *Urdu: [[بھرنا]] (bharanā)<!-- i also see bharnaa -->
+
+==[[multilingual associations]]==
+*[[Russian]]: '''fill''' [[car]] картофелем /kartofel'em/ (with  [[potato]]es)
