--- a/wiki/%E8%B6%8A.wikitext
+++ b/wiki/%E8%B6%8A.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#exceed, go beyond
-*# the more ...
+*# [[exceed]], [[go beyond]]
+*# the [[more]] ...
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,36 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yut6
 
+===Compounds===
+*[[越次]]
+*[[越冬]]
+*[[越发]]
+*[[越分]]
+*[[越轨]]
+*[[越过]]
+*[[越级]]
+*[[越加]]
+*[[越界]]
+*[[越境]]
+*[[越来越…]]
+*[[越礼]]
+*[[越南]]
+*[[越权]]
+*[[越位]]
+*[[越野]]
+*[[越野车]]
+*[[越野赛]]
+*[[越野赛跑]]
+*[[越狱]]
+*[[越…越…]]
+*[[越障]]
+*[[越俎代庖]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[えつ]] (etsu), [[おち]] (ochi), [[かつ]] (katsu)
