--- a/wiki/fill.wikitext
+++ b/wiki/fill.wikitext
@@ -24,14 +24,11 @@
 *French: [[remplir]]
 *German: [[füllen]]
 *Greek: [[γεμίσει]]
-*Hebrew:[[:he:למלא|למלא]] 
 *Hindi: [[भरना]] (bharanā)<!-- i also see bharnaa -->
-*Italian: [[:it:riempirsi|riempirsi]]
+*Italian: [[riempirsi]]
+*Japanese: [[満たす]] ([[みたす]])
 *[[Pitjantjatjara]]: [[angaṉi]]
 *Portuguese: [[encher]]
-*Russian: [[:ru:заполнить|заполнить]] (zapolnit')
-*Spanish: [[:es:llenar|llenar]]
+*Russian: [[заполнить]] (zapolnit')
+*Spanish: [[llenar]]
 *Urdu: [[بھرنا]] (bharanā)<!-- i also see bharnaa -->
-
-==[[multilingual associations]]==
-*[[Russian]]: '''fill''' [[car]] картофелем /kartofel'em/ (with  [[potato]]es)
