--- a/wiki/seagull.wikitext
+++ b/wiki/seagull.wikitext
@@ -1,10 +1,14 @@
 ==English==
-
 ===Noun===
-Seagull - bird
+'''seagull'''
 
-====translation====
-*[[Russian]]: [[:ru:чайка|чайка]] /chaika/
+# a bird
 
-==[[multilingual associations]]==
-*[[Hebrew]]: - '''seagull''' [[:he:על|על]] ה[[:he:גל|גל]] /al a' gal/ (on [[wave]])
+====Translations====
+*Chinese: [[海鸥]] (hai'ou)
+*Italian: [[gabbiano]]
+*Japanese: [[鴎]] ([[かもめ]])
+*[[Russian]]: [[чайка]] (chajka)
+
+===Related terms===
+*[[gull]]
