--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -27,7 +27,7 @@
 *Finnish: [[rakastaa]]
 *French: [[aimer]]
 *German: [[lieben]]
-*Hebrew: [[:he:לאהוב|לאהוב]]
+*Hebrew: [[לאהוב]]
 *Italian: [[amare]]
 |}
 | width=1% |
@@ -36,10 +36,10 @@
 *Japanese: [[恋する]] (こいする, koisuru), [[愛する]] (あいする, aisuru)
 *Latvian: [[mīlēt]]
 *Portuguese: [[amar]]
-*Russian: [[:ru:любить|любить]]
-*Spanish: [[:es:amar|amar]], [[:es:querer|querer]]
+*Russian: [[любить]]
+*Spanish: [[amar]], [[querer]]
 *{{sk}}: [[milovať]], [[ľúbiť]]
-*Swedish: [[:sv:älska|älska]], [[vara kär i]]
+*Swedish: [[älska]], [[vara kär i]]
 *Tamil: [[காதலி]] (between man and woman-sexual love)
 *Marathi: PREM
 |}
@@ -53,18 +53,18 @@
 *Catalan: [[agradar]]
 *Chinese: [[喜欢]]/[[喜歡]] (xihuan), [[爱好]]/[[愛好]] (aihao)
 *Estonian: [[armastama]]
-*Finnish: [[:fi:pitää|pitää]] [[:fi:paljon|paljon]]/[[kovasti]], [[rakastaa]]
-*French: [[:fr:aimer|aimer]] [[:fr:beaucoup|beaucoup]], aimer [[bien]], [[vouloir]] [[beaucoup]]
+*Finnish: [[pitää]] [[paljon]]/[[kovasti]], [[rakastaa]]
+*French: [[aimer]] [[beaucoup]], aimer [[bien]], [[vouloir]] [[beaucoup]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*German: [[:de:lieben|lieben]]
+*German: [[lieben]]
 *Italian: [[volere]] [[molto]]
 *Japanese: [[気に入っている]]
 *Latvian: [[patikt]], [[mīlēt]]
 *Portuguese: [[adorar]], [[amar]]
-*Russian: [[:ru:любить|любить]]
+*Russian: [[любить]]
 |}
 |}
 
@@ -95,7 +95,7 @@
 {|
 *Finnish: [[rakastaa]]
 *German: [[lieben]], [[verehren]]
-*Greek: [[αγαπάω]] (agapáō)
+*Greek: [[αγαπάω]] (agapáo)
 *Latin: [[diligere]]
 |}
 | width=1% |
@@ -117,7 +117,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Esperanto: [[ami]]
 *Frisian: [[hâlde fan]]
 *Guarani: [[ayhu]] (ah-)
-*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
+*Hebrew: [[אהבה]] (A'ha'va)
 *Indonesian: [[cinta]], [[kasih]], [[sayang]]
 *Interlingua: [[amar]]
 *Korean: [[사랑하다]] (saranghada)
@@ -160,9 +160,9 @@ The translations below need to be checked by native speakers and then inserted i
 {|
 *Estonian: [[armastus]]
 *Finnish: [[rakkaus]]
-*French: [[amour]] [[:fr:amour| (fr)]] ''m''
-*German: [[Liebe]] [[:de:Liebe| (de)]] ''f''
-*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
+*French: [[amour]] [[:fr:amour|(fr)]] ''m''
+*German: [[Liebe]] [[:de:Liebe|(de)]] ''f''
+*Hebrew: [[אהבה]] (A'ha'va)
 *Irish Gaelic: [[Grá]]
 *Italian: [[amore]] ''m''
 |}
@@ -173,7 +173,7 @@ The translations below need to be checked by native speakers and then inserted i
 *Latvian: [[mīlestība]] ''f'', [[mīla]] ''f''
 *Portuguese: [[amor#Portuguese|amor]]
 *{{sk}}: [[láska]] ''f''
-*Russian: [[:ru:любовь|любовь]] /l'ubov'/ ''f''
+*Russian: [[любовь]] (l'ubov') ''f''
 *Spanish: [[amor#Spanish|amor]] ''m''
 *Swedish: [[kärlek]] ''c''
 *Ukrainian: [[кохання]], [[любов]]
@@ -186,20 +186,20 @@ The translations below need to be checked by native speakers and then inserted i
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Estonian: [[armastus]]
-*Finnish: [[:fi:romantiikka|romantiikka]], [[lempi]] (''physical or poetic''), [[rakkaus]]
-*French: [[:fr:amour|amour]] ''m''
-*German: [[:de:Liebe|Liebe]] ''f''
-*Hebrew: [[:he:אהבה|אהבה]] (A'ha'va)
+*Finnish: [[romantiikka]], [[lempi]] (''physical or poetic''), [[rakkaus]]
+*French: [[amour]] ''m''
+*German: [[Liebe]] ''f''
+*Hebrew: [[אהבה]] (A'ha'va)
 
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[:it:amore|amore]] ''m''
+*Italian: [[amore]] ''m''
 *Japanese: [[恋]] (こい, koi), [[恋愛]] (れんあい, ren-ai)
 *Latvian: [[mīlestība]] ''f'', [[mīla]] ''f''
 *Portuguese: [[amor#Portuguese|amor]]
-*Russian: [[:ru:любовь|любовь]] ''f''
+*Russian: [[любовь]] ''f''
 *{{sk}}: [[láska]] ''f''
 *Swedish: [[kärlek]] ''c''
 |}
@@ -211,17 +211,17 @@ The translations below need to be checked by native speakers and then inserted i
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Finnish: [[rakas]], [[kulta]]
-*French: [[:fr:amour|amour]] ''m''
-*German: [[:de:Liebe|Liebe]] ''f'', [[Liebling]] ''m''
+*French: [[amour]] ''m''
+*German: [[Liebe]] ''f'', [[Liebling]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[:it:amore|amore]] ''m''
+*Italian: [[amore]] ''m''
 *Japanese: [[恋人]] (こいびと, koibito)
 *Latvian: [[mīļais]] ''m'', [[mīļā]] ''f'', [[mīļums]] ''f'', [[mīla]] ''m'' or ''f''
 *Portuguese: [[amor#Portuguese|amor]]
-*Russian: [[:ru:любимый|любимый]] /l'ubimi'y/ ''m'', [[:ru:любимая|любимая]] /l'ubimaya/ ''f''
+*Russian: [[любимый]] (ljubimyj) ''m'', [[любимая]] (ljubimaja) ''f''
 *{{sk}}: [[láska]] ''f''
 *Swedish: [[älskling]] ''c'' 
 |}
@@ -271,12 +271,12 @@ The translations below need to be checked by native speakers and then inserted i
 *Dutch: [[liefde]] ''f''
 *Ekspreso: [[amor]]
 *Esperanto: [[amo]]
-*Greek: [[αγάπη]] ''f'' (agápē), [[έρωτας]] ''m'' (érōtas)  (''Note: "αγάπη" refers to "pure" love, such as that between a mother and child or even between a non-erotic aspect of the love between a husband and wife, while έρωτας means erotic love, such as that between a girlfriend and boyfriend.'')
+*Greek: [[αγάπη]] ''f'' (agápi), [[έρωτας]] ''m'' (érotas)  (''Note: "αγάπη" refers to "pure" love, such as that between a mother and child or even between a non-erotic aspect of the love between a husband and wife, while έρωτας means erotic love, such as that between a girlfriend and boyfriend.'')
 *Guarani: [[ayhu]] (t-)
 *Indonesian: [[cinta]], [[kasih]], [[sayang]]
 *Interlingua: [[amor]]
 *Korean: [[사랑]] (sarang)
-*Latin: [[:la:amor|amor]]
+*Latin: [[amor]]
 *Polish: [[miłość]] ''f''
 *Romanian: [[dragostea]] ''f''
 *[[Romanica]]: [[amor]] ''m''
@@ -310,14 +310,6 @@ The translations below need to be checked by native speakers and then inserted i
 '''Love'''
 
 # A male name
-
-
-
 [[pl:love]]
 [[sv:love]]
-
-==[[Multilingual associations]]==
-*[[Hebrew]]: '''love''' ב[[:he:לב|לב]] /ba l'ev/ (in [[heart]]), '''love''' ו[[:he:ללבלב|ללבלב]] /ve l'elavl'ev/ (and [[blossom]]) 
-*[[Russian]]: I love you - [[:ru:я|я]] /ja/ тебя /t'ebja/ люблю /l'ubl'u/ 
-
 [[Category:Nouns]][[Category:Transitive Verbs]][[Category:Intransitive Verbs]]
