--- a/wiki/eternity.wikitext
+++ b/wiki/eternity.wikitext
@@ -1,24 +1,20 @@
 ==English==
-
 ===Pronounciation===
 {{substub}}
-                                                                                                                                                      
+
 ===Noun===
 '''eternity''' (''plural'': eternities)
 #The period of time which extends infinitely far into the future.
-                                                                                                                                                      
+
 ===Derivatives===
 *[[eternal]]
-                                                                                                                                                      
+
 ===Translations===
 *[[Czech]]: [[věčnost]] ''f''
-*[[French]]: [[éternité]] ''f''
-*[[Hebrew]]: [[:he:נצח|נצח]]  
-*[[Russian]]: [[:ru:вечность|вечность]] /vechnost'/ 
+*French: [[éternité]] ''f''
+*[[Hebrew]]: [[נצח]]  
+*[[Russian]]: [[вечность]] /vjechnost'/ 
 
 ===See Also===
 *[[forever]]
 *[[evermore]]
-
-==[[multilingual associations]]==
-*[[Russian]]: тяните /tyanite/ ([[extend]]) нити /niti/ ([[thread]]s) в /v/ ([[into]]) '''eternity'''
