--- a/wiki/exaggerate.wikitext
+++ b/wiki/exaggerate.wikitext
@@ -4,19 +4,14 @@
 #to [[overstate]], to describe more than is [[fact]]
 #: ''I've told you a [[billion]] times not to exaggerate!''
 
-
 ====Translations====
-*Chinese: [[:zh:誇大|誇大]], [[:zh:夸大|夸大]]
+*Chinese: [[誇大]], [[夸大]]
 *Dutch: [[overdrijven]]
-*French: [[:fr:exagérer|exagérer]]
-*German: [[:de:übertreiben|übertreiben]]
-*Greek: [[:el:υπερβάλει|υπερβάλει]]
-*Hebrew: [[:he:להגזים|להגזים]]
-*Italian: [[:it:esageri|esageri]]
-*Russian: [[:ru:преувиличивать|преувиличивать]], [[:ru:утрировать|утрировать]]
-*Spanish: [[:es:exagere|exagere]]
-
+*French: [[exagérer]]
+*German: [[übertreiben]]
+*Greek: [[υπερβάλει]]
+*Hebrew: [[להגזים]]
+*Italian: [[esagerare]]
+*Russian: [[преувиличивать]], [[утрировать]]
+*Spanish: [[exagere]]
 [[Category:Transitive Verbs]]
-
-==[[multilingual associations]]==
-*[[Russian]]: [[:ru:егоза|егоза]] /egoza/ ([[fidget]]) [[:ru:жар|жар]]у /jaru/ ([[hot]] [[weather]])  '''exaggerates'''
