--- a/wiki/destroy.wikitext
+++ b/wiki/destroy.wikitext
@@ -37,7 +37,7 @@
 |}
 |}
 
-*[[Russian]]: [[:ru:разрушать|разрушать]] /razruSat'/
+*[[Russian]]: [[разрушать]] /razruSat'/
 
 '''to release resources on a computer'''
 {| border=0  width=100%
@@ -52,8 +52,3 @@
 
 |}
 |}
-
-==[[multilingual associations]]==
-*[[Russian]]: 
-**строй /stroj/ ([[build]]) и /i/ (and) '''destroy''' 
-**'''destroy''' [[:ru:строй|строй]] /stroj/ ([[system]])
