--- a/wiki/ant.wikitext
+++ b/wiki/ant.wikitext
@@ -36,14 +36,14 @@
 *German: [[Ameise]] ''f''
 *[[Gooniyandi]]: [[migi]]
 *[[Guarani]]: [[tahýi]]
-*Hebrew: [[:he:נמלה|נמלה]] /nemal'a/ ''f''
+*Hebrew: [[נמלה]] /nemal'a/ ''f''
 *Indonesian: [[semut]]
 *[[Interlingua]]: [[formica]]
 *Italian: [[formica]] ''f''
 *Japanese: [[蟻]] ([[あり]], ari)
 *[[Kaurna]]: [[kadngi]]
 *Korean: [[개미]] (gaemi)
-*Latin: [[:la:formica|formica]] ''f''
+*Latin: [[formica]] ''f''
 *Lithuanian: [[skruzdėlė]] ''f''
 *Mandarin: [[蚂蚁]] / [[螞蟻]] (Pīnyīn: mǎ yǐ)
 *[[Meryam Mir]]: [[izrum]]
@@ -55,11 +55,11 @@
 *[[Pitjantjatjara]]: [[minga]]
 *Polish: [[mrówka]] ''f''
 *Portuguese: [[formiga]] ''f''
-*Russian: [[:ru:муравей|муравей]] (muravey)
+*Russian: [[муравей]] (muravey)
 *Slovak: [[mravec#Slovak|mravec]] ''m''
 *Slovene: [[mravlja]] ''f''
-*Spanish: [[:es:hormiga|hormiga]] ''f''
-*Swedish: [[:sv:myra|myra]]
+*Spanish: [[hormiga]] ''f''
+*Swedish: [[myra]]
 *Tagalog: [[langgam]]
 *Tamil: [[எறும்பு]] (erumpu)
 *[[Torres Strait Creole]]: [[anis]]
@@ -81,8 +81,5 @@
 # [[elk]], [[moose]]
 
 [[Category:English insects]]
-
-[[de:ameise]] [[fr:fourmi]]
-
-==[[multilingual associations]]==
-*[[Russian]]: [[:ru:античный|античный]] /antichni'y/ ([[ancient]]) '''ant''' - [[teacher]]
+[[de:ant]]
+[[fr:ant]]
