--- a/wiki/describe.wikitext
+++ b/wiki/describe.wikitext
@@ -11,11 +11,8 @@
 ====Translations====
 *[[Estonian]]: [[kirjeldama]] (1)
 *[[German]]: [[beschreiben]] (1)
-*[[Russian]]: [[:ru:описать|описать]] /opisat'/
+*[[Russian]]: [[описать]] /opisat'/
 
 ====Related terms====
 *[[description]]
 *[[descriptive]]
-
-==[[multilingual associations]]==
-*[[Russian]]: '''describe''' [[:ru:десерт|десерт]] [[:ru:из|из]] /iz/ (of) [[:ru:краб|краб]]а /kraba/ ([[crab]])
