--- a/wiki/dangerous.wikitext
+++ b/wiki/dangerous.wikitext
@@ -23,12 +23,9 @@
 *French: [[dangereux]] ''m'', [[dangereuse]] ''f''
 *German: [[gefährlich]]
 *Greek: [[επικίνδυνος]] ''m'', [[επικίνδυνη]] ''f'', [[επικίνδυνο]] ''n''
-*Hebrew: [[:he:מסוכן|מסוכן]] /me'sukan/
+*Hebrew: [[מסוכן]] /me'sukan/
 *Italian: [[pericoloso]] ''m'', [[pericolosa]] ''f''
 *Portuguese: [[perigoso]] ''m'', [[perigosa]] ''f''
-*Russian: [[:ru:опасный|опасный]] ''m'', [[:ru:опасная|опасная]] ''f'', [[:ru:опасное|опасное]] ''n''
+*Russian: [[опасный]] ''m'', [[опасная]] ''f'', [[опасное]] ''n''
 *Spanish: [[peligroso]] ''m'', [[peligrosa]] ''f''
 *Swedish: [[farlig]], [[farligt]]<!-- what's the difference?? -->
-
-==[[Multilingual associations]]==
-*[[Russian]]: [[:ru:дождь|дождь]] /dojd'/ ([[rain]]) [[dangerous]] [[:ru:для|для]] роз /dlya roz/ ([[for]] [[rose]]s)
