--- a/wiki/couple.wikitext
+++ b/wiki/couple.wikitext
@@ -11,9 +11,6 @@
 #One of the pairs of plates of two metals which compose a voltaic battery; -- called a voltaic couple or galvanic couple.
 #Two rotations, movements, etc., which are equal in amount but opposite in direction, and acting along parallel lines or around parallel axes.
 
-===translation===
-*[[Hebrew]]: [[:he:???|???]] /zug/ 
-*[[Russian]]: [[:ru:????|????]] /para/ 
-
-==[[multilingual associations]]==
-*[[Russian]]: '''couple''' ?????? /kapel/ (of [[drop]]s)
+===Translations===
+*[[Hebrew]]: [[זוג]] /zug/
+*[[Russian]]: [[пара]] /para/
