--- a/wiki/wisdom.wikitext
+++ b/wiki/wisdom.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 ===Etymology===
 From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ness]]'', ''[[-head]]'', and ''[[-hood]]''
@@ -17,23 +16,23 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 <!--languages from A to I go here-->
 *[[Anglo-Saxon]]: [[wísdóm]] ''m''
 *Dutch: [[wijsheid]]
-*Finnish: [[:fi:viisaus|viisaus]]
-*French: [[:fr:sagesse|sagesse]]
-*German: [[:de:klugheit|klugheit]]
-*[[Hebrew]]: [[:he:חכמה|חכמה]] /hohma/
+*Finnish: [[viisaus]]
+*French: [[sagesse]]
+*German: [[klugheit]]
+*[[Hebrew]]: [[חכמה]] /hohma/
 *Indonesian: [[kebijaksanaan]]
-*[[Italian]]: [[:it:saggezza|saggezza]]
+*[[Italian]]: [[saggezza]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
-*Latin: [[:la:sapientia|sapientia]] ''f''
+*Latin: [[sapientia]] ''f''
 *Latvian: [[gudrība]] ''f''
-*Portuguese: [[:pt:sabedoria|sabedoria]]
-*[[Russian]]: [[:ru:мудрость|мудрость]] ''f'' (mudrostj)
-*Spanish: [[:es:sabiduría|sabiduría]] ''f''
-*Swedish: [[:sv:visdom|visdom]] ''c''
+*Portuguese: [[sabedoria]]
+*[[Russian]]: [[мудрость]] ''f'' (mudrostj)
+*Spanish: [[sabiduría]] ''f''
+*Swedish: [[visdom]] ''c''
 |}
 |}
 
@@ -43,6 +42,3 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 
 ====See also====
 *[[morality]]
-
-==[[Multilingual associations]]==
-*[[Hebrew]]-[[Russian]]: [[:he:ידע|ידע]] ([[knowledge]]) [[:ru:о|о]] ([[about]]) еде ([[food]]) '''wisdom''' [[:ru:везде|везде]] ([[everywhere]])
