--- a/wiki/crumb.wikitext
+++ b/wiki/crumb.wikitext
@@ -1,7 +1,4 @@
-Crumb
-
 ==English==
-
 ===Noun===
 '''crumb'''
 
@@ -21,7 +18,7 @@ Crumb
 *Japanese: [[パン粉]]
 *Portuguese: [[migalha]] ''f''
 *{{ro}}: [[firimitură]] ''f''
-*Russian: [[:ru:крошка|крошка]] 
+*Russian: [[крошка]] 
 *Spanish: [[miga]] ''f''
 
 ===Verb===
@@ -31,8 +28,5 @@ Crumb
 *[[crumbed]]
 
 ====Translations====
-*[[German]]: [[:de:panieren|panieren]]
-*[[Russian]]: [[:ru:крошить|крошить]]
-
-==[[Multilingual associations]]==
-*[[Russian]]: [[crumb]] [[:ru:вес|вес]]ом ([[weighted]]) [[:ru:грамм|грамм]]  ([[gramm]])
+*[[German]]: [[panieren]]
+*[[Russian]]: [[крошить]]
