--- a/wiki/mercury.wikitext
+++ b/wiki/mercury.wikitext
@@ -114,6 +114,7 @@ http://elements.vanderkrogt.net/elem/hg.html
 *[[Dutch]]: [[Mercurius]] ''m''
 *Finnish: [[Merkurius]]
 *French: [[Mercure]] ''m''
+*German: [[Merkur]] ''m''
 *Italian: [[Mercurio]] ''m''
 |}
 | width=1% |
