--- a/wiki/downsize.wikitext
+++ b/wiki/downsize.wikitext
@@ -1,7 +1,6 @@
-==Verb==
-'''Downsize'''
+==English==
+===Verb===
+'''to downsize'''
 
 #To reduce in size or number. 
-
-''The company chose to '''downsize''' by firing half of its workers.
-''
+#:''The company chose to '''downsize''' by firing half of its workers.''
