--- a/wiki/coddle.wikitext
+++ b/wiki/coddle.wikitext
@@ -1,9 +1,9 @@
-===Transitive Verb===
-'''Coddle'''
+==English==
+===Transitive berb===
+'''to coddle'''
 
 #To treat gently or with great care.
 #To cook slowly in hot water that below the boiling point.
 
-
-==Synonyms==
-[[pamper]]
+====Synonyms====
+*[[pamper]]
