--- a/wiki/elucidate.wikitext
+++ b/wiki/elucidate.wikitext
@@ -1,26 +1,4 @@
 ==English==
- 
-===Etymology===
-
- ===Pronunciation===
-
- ===Verb===
- '''to elucidate''' (elucidated / elucidating / elucidation)
+===Verb===
+'''to elucidate''' (elucidated / elucidating / [[elucidation]])
 # to [[clarify]], to [[explain]]
-
- ====Quotations====
-
- ====Synonyms====
-
- ====Antonyms====
-
- ====Translations====
-
- ====Derived words====
-
- ====Related words====
-
- ====References====
-
-==[[multilingual associations]]==
-*[[Russian]]: [[:ru:еле|еле]] /ele/ ([[scarcely]]) усидеть /usidet'/ (to [[remain]] sitting)  to '''elucidate'''
