--- a/wiki/consider.wikitext
+++ b/wiki/consider.wikitext
@@ -10,14 +10,11 @@
 #: ''I considered the pie underdone.''
 
 ====translation====
-*[[Hebrew]]: [[:he:לחשוב|לחשוב]] /lahshov/
-*[[Russian]]: [[:ru:рассматривать|рассматривать]] /rassmatrivat'/
+*[[Hebrew]]: [[לחשוב]] /lahshov/
+*[[Russian]]: [[рассматривать]] (rassmatrivat')
 
 ===Related Terms===
 *[[considerable]]
 *[[considerate]]
 *[[consideration]]
 *[[reconsider]]
-
-==[[multilingual associations]]==
-*[[Russian]]: '''consider''' на коне сидя /na kone sidya/ (sitting [[on]] a [[horse]])
