--- a/wiki/Old_Testament.wikitext
+++ b/wiki/Old_Testament.wikitext
@@ -1,2 +1,6 @@
-The Old Testament or [[the Hebrew Scriptures]] constitutes the first major part of the Christian Bible, usually divided into the categories law, history, poetry (or wisdom books) and prophecy. All of those books were written before the coming of Christ.
-*External links:[http://en.wikipedia.org/wiki/Old_testament "Old Testament" at Wikipedia]
+==English==
+===Proper Noun===
+#The Old Testament or the [[Hebrew Scriptures]] constitutes the first major part of the Christian Bible, usually divided into the categories law, history, poetry (or wisdom books) and prophecy. All of these books were written before the coming of Christ.
+
+===See Also===
+*[[w:Old Testament|Old Testament]]
