--- a/wiki/Canarsie.wikitext
+++ b/wiki/Canarsie.wikitext
@@ -1,1 +1,3 @@
-A neighborhood in Brooklyn. A stepping stone for immigrants from where have passed many ethnic groups into american life ,indeed in very successful style. Populated in the 50s and 60s by Russian jews.
+==English==
+===Proper Noun===
+#A neighborhood in Brooklyn.
