/* Noun */ elaborated slightly <arbalest#50987>

--- a/wiki/arbalest.wikitext
+++ b/wiki/arbalest.wikitext
@@ -6,4 +6,4 @@ From Middle English [[arblast]], from Old English, from Old French [[arbaleste]]
 ===Noun===
 '''arbalest'''
 
-#a medieval [[crossbow]]
+#a late form of medieval [[crossbow]], having a steel [[prod]], or bow
