/* Translations */ titenfisch? too funny <octopus#8153>

--- a/wiki/octopus.wikitext
+++ b/wiki/octopus.wikitext
@@ -24,7 +24,7 @@
 *Estonian: [[kaheksajalg]]
 *Finnish: [[mustekala]]
 *French: [[pieuvre]] ''f'', [[poulpe]] ''m''
-*German: [[Titenfisch]], [[Krake]]
+*German: [[Tintenfisch]], [[Krake]]
 *Greek: [[οκταπους]] (oktapus), [[χταπόδι]] ''n''(khtapodi)
 *[[Hawaiian]]: [[he'e]]
 *Hungarian: [[polip]]
