+translations from Wiktionary <Jason#65564>

--- a/wiki/Jason.wikitext
+++ b/wiki/Jason.wikitext
@@ -27,12 +27,18 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*French: Jason
+*German: Jason
 *Italian: [[Giasone]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Russian: [[Ясон]], [[Язон]]
+*Spanish: [[Jasón]]
+*Swedish: Jason
+*Ukrainian: [[Ясон]], [[Іасо́н]], [[Язо́н]]
 |}
 |}
 
