--- a/wiki/understand.wikitext
+++ b/wiki/understand.wikitext
@@ -39,7 +39,7 @@
 *Indonesian: [[mengerti]], [[paham]], [[paham|memahami]] (1)
 *Italian: [[capire]] (1)
 *Japanese: [[分かる]] / [[解る]] ([[わかる]], wakaru), [[理解]]する ([[りかい]]する, rikai-suru) (1)
-*Latin: [[comprehendere]]
+*Latin: [[intellegere]], [[comprehendere]]
 *Norwegian: [[forst&aring;]] (1)
 *Spanish: [[entender]] (1), [[comprender]]
 *Swedish: [[förstå]] (1,2)
