/* Verb */ Participles & Infinitives. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -5,3 +5,43 @@
 ('''comprehend&#333;''', '''comprehendere''', '''comprehend&#299;''', '''compreh&#275;nsum''')
 # to grasp
 # to understand
+
+====Participles====
+{| cellpadding="5" border="1"
+! ''Tense \ Voice''
+! ''Active''
+! ''Passive''
+|-
+! ''Present''
+| <big> comprehend&#275;ns
+| 
+::&mdash;
+|-
+! ''Perfect''
+|
+::&mdash;
+| <big> comprehensus
+|-
+! ''Future
+| <big> comprehens&#363;rus
+| <big> comprehendendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+! ''Tense \ Voice''
+! ''Active''
+! ''Passive''
+|-
+! ''Present''
+| <big> comprehendere
+| <big> comprehend&#299;
+|-
+! ''Perfect''
+| <big> comprehendisse
+| <big> comprehensus esse
+|-
+! ''Future''
+| <big> comprehens&#363;rus esse
+| <big> compreh&#275;nsum &#299;r&#299;
+|}
