Conjugation: Present triad. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -45,3 +45,33 @@
 | <big> comprehens&#363;rus esse
 | <big> compreh&#275;nsum &#299;r&#299;
 |}
+
+====Conjugation====
+Third conjugation (3).
+
+=====<u>''Present''</u>=====
+comprehend&#333; : ''I grasp'' <br>
+comprehendis : ''you grasp'' <br>
+comprehendit : ''he/she/it grasps'' <br>
+:&mdash; <br>
+comprehendimus : ''we grasp'' <br>
+comprehenditis : ''you (all) grasp'' <br>
+comprehendunt : ''they grasp'' <br>
+
+=====<u>''Future''</u>=====
+comprehendam : ''I will grasp'' <br>
+comprehend&#275;s : ''you will grasp'' <br>
+comprehendet : ''he/she/it will grasp'' <br>
+:&mdash; <br>
+comprehend&#275;mus : ''we will grasp'' <br>
+comprehend&#275;tis : ''you (all) will grasp'' <br>
+comprehendent : ''they will grasp'' <br>
+
+=====<u>''Imperfect</u>=====
+comprehend&#275;bam : ''I was grasping'' <br>
+comprehend&#275;b&#257;s : ''you were grasping'' <br>
+comprehend&#275;bat : ''he/she/it was grasping'' <br>
+:&mdash; <br>
+comprehend&#275;b&#257;mus : ''we were grasping'' <br>
+comprehend&#275;b&#257;tis : ''you (all) were grasping'' <br>
+comprehend&#275;bant : ''they were grasping'' <br>
