/* Conjugation */ Perfect triad. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -75,3 +75,30 @@ comprehend&#275;bat : ''he/she/it was grasping'' <br>
 comprehend&#275;b&#257;mus : ''we were grasping'' <br>
 comprehend&#275;b&#257;tis : ''you (all) were grasping'' <br>
 comprehend&#275;bant : ''they were grasping'' <br>
+
+=====<u>''Perfect''</u>=====
+comprehend&#299; : ''I grasped'' <br>
+comprehendist&#299; : ''you grasped'' <br>
+comprehendit : ''he/she/it grasped'' <br>
+:&mdash; <br>
+comprehendimus : ''we grasped'' <br>
+comprehendistis : ''you (all) grasped'' <br>
+comprehend&#275;runt : ''they grasped'' <br>
+
+=====<u>''Future Perfect''</u>=====
+comprehender&#333; : ''I will have grasped'' <br>
+comprehenderis : ''you will have grasped'' <br>
+comprehenderit : ''he/she/it will have grasped'' <br>
+:&mdash; <br>
+comprehenderimus : ''we will have grasped'' <br>
+comprehenderitis : ''you (all) will have grasped'' <br>
+comprehenderint : ''they will have grasped'' <br>
+
+=====<u>''Pluperfect''</u>=====
+comprehenderam : ''I had grasped'' <br>
+comprehender&#257;s : ''you had grasped'' <br>
+comprehenderat : ''he/she/it had grasped'' <br>
+:&mdash; <br>
+comprehender&#257;mus : ''we had grasped'' <br>
+comprehender&#257;tis : ''you (all) had grasped'' <br>
+comprehenderant : ''they had grasped'' <br>
