--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -102,3 +102,30 @@ comprehenderat : ''he/she/it had grasped'' <br>
 comprehender&#257;mus : ''we had grasped'' <br>
 comprehender&#257;tis : ''you (all) had grasped'' <br>
 comprehenderant : ''they had grasped'' <br>
+
+=====<u>''Present Passive''</u>=====
+comprehendor : ''I am understood'' <br>
+comprehenderis : ''you are understood'' <br>
+comprehenditur : ''he/she/it is understood'' <br>
+:&mdash; <br>
+comprehendimur : ''we are understood'' <br>
+comprehendimin&#299; : ''you (all) are understood'' <br>
+comprehenduntur : ''they are understood'' <br>
+
+=====<u>''Future Passive''</u>=====
+comprehendar : ''I will be understood'' <br>
+comprehend&#275;ris : ''you will be understood'' <br>
+comprehend&#275;tur : ''he/she/it will be understood'' <br>
+:&mdash; <br>
+comprehend&#275;mur : ''we will be understood'' <br>
+comprehend&#275;min&#299; : ''you (all) will be understood'' <br>
+comprehendentur : ''they will be understood'' <br>
+
+=====<u>''Imperfect Passive''</u>=====
+comprehend&#275;bar : ''I was being understood'' <br>
+comprehend&#275;b&#257;ris : ''you were being understood'' <br>
+comprehend&#275;b&#257;tur : ''he/she/it was being understood'' <br>
+:&mdash; <br>
+comprehend&#275;b&#257;mur : ''we were being understood'' <br>
+comprehend&#275;b&#257;min&#299; : ''you (all) were being understood'' <br>
+comprehend&#275;bantur : ''they were being understood'' <br>
