tighened defn1, -defn 3 (Christan != Christianity), +rel, +see <Christian#8305>

--- a/wiki/Christian.wikitext
+++ b/wiki/Christian.wikitext
@@ -1,7 +1,6 @@
 ===Noun===
-# a person who exercises faith that Jesus of Nazareth is the Messiah of the Hebrew Scriptures as explained by the Christian Greek Scriptures.
-# a person from the Western World who claims this name for himself as in ''Christians vs. Moors''.
-# the religion of [[Christianity]].
+# A person who believes that Jesus of Nazareth is the Jewish [[messiah]], as related in the [[New Testament]].
+# A person from the [[Western World]] who claims this name (e.g., ''Christians vs. Moors'').
 
 ====Translations====
 *Dutch: [[christen]] ''m, f''
@@ -17,4 +16,24 @@
 
 ====Related words====
 
-[[Christianize]] (verb)
+*[[Christ]]
+*[[Christian name]]
+*[[Christianity]]
+*[[Christianize]]
+
+====See Also===
+*[[Catholic]]
+*[[fundamentalist]]
+*[[Jew]]
+*[[messiah]]
+*[[Mormon]]
+*[[Muslim]]
+*[[New Testament]]
+*[[Old Testament]]
+*[[Protestant]]
+
+===Adjective===
+'''Christian'''
+
+# (''dated'') Kind, charitable.
+#: ''That's very Christian of you.''
