/* Conjugation */ Perfect Passive triad. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -129,3 +129,30 @@ comprehend&#275;b&#257;tur : ''he/she/it was being understood'' <br>
 comprehend&#275;b&#257;mur : ''we were being understood'' <br>
 comprehend&#275;b&#257;min&#299; : ''you (all) were being understood'' <br>
 comprehend&#275;bantur : ''they were being understood'' <br>
+
+=====<u>''Perfect Passive''</u>=====
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum sum : ''I have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum es : ''you have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum est : ''he/she/it has been understood'' <br>
+:&mdash; <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa sumus : ''we have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa estis : ''you (all) have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa sunt : ''they have been understood'' <br>
+
+=====<u>''Future Perfect Passive''</u>=====
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum er&#333; : ''I will have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum eris : ''you will have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum erit : ''he/she/it will have been understood'' <br>
+:&mdash; <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa erimus : ''we will have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa eritis : ''you (all) will have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa erunt : ''they will have been understood'' <br>
+
+=====<u>''Pluperfect Passive''</u>=====
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum eram : ''I had been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum er&#257;s : ''you had been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum erat : ''he/she/it had been understood'' <br>
+:&mdash; <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa er&#257;mus : ''we had been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa er&#257;tis : ''you (all) had been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa erant : ''they had been understood'' <br>
