--- a/wiki/pantheon.wikitext
+++ b/wiki/pantheon.wikitext
@@ -1,1 +1,4 @@
-'''pantheon'''(noun),from [[Greek]],"all gods",ergo the total gods of a religion or culture.
+==English==
+===Noun===
+'''pantheon'''
+#From [[Greek]], "all gods", ergo the total gods of a religion or culture.
