/* Conjugation */ Present Subjunctive quartet. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -156,3 +156,39 @@ compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum erat : ''he/she/it had been
 compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa er&#257;mus : ''we had been understood'' <br>
 compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa er&#257;tis : ''you (all) had been understood'' <br>
 compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa erant : ''they had been understood'' <br>
+
+=====<u>''Present Subjunctive''</u>=====
+comprehendam : ''I may grasp'' <br>
+comprehend&#257;s : ''you may grasp'' <br>
+comprehendat : ''he/she/it may grasp'' <br>
+:&mdash; <br>
+comprehend&#257;mus : ''we may grasp'' <br>
+comprehend&#257;tis : ''you (all) may grasp'' <br>
+comprehendant : ''they may grasp'' <br>
+
+=====<u>''Imperfect Subjunctive''</u>=====
+comprehenderem : ''maybe I was grasping'' <br>
+comprehender&#275;s : ''maybe you were grasping'' <br>
+comprehenderet : ''maybe he/she/it was grasping'' <br>
+:&mdash; <br>
+comprehender&#275;mus : ''maybe we were grasping'' <br>
+comprehender&#275;tis : ''maybe you (all) were grasping'' <br>
+comprehenderent : ''maybe they were grasping'' <br>
+
+=====<u>''Present Subjunctive Passive''</u>=====
+comprehendar : ''I may be understood'' <br>
+comprehend&#257;ris : ''you may be understood'' <br>
+comprehend&#257;tur : ''he/she/it may be understood'' <br>
+:&mdash; <br>
+comprehend&#257;mur : ''we may be understood'' <br>
+comprehend&#257;min&#299; : ''you (all) may be understood'' <br>
+comprehendantur : ''they may be understood'' <br>
+
+=====<u>''Imperfect Subjunctive Passive''</u>=====
+comprehenderer : ''maybe I was being understood'' <br>
+comprehender&#275;ris : ''maybe you were being understood'' <br>
+comprehender&#275;tur : ''maybe he/she/it was being understood'' <br>
+:&mdash; <br>
+comprehender&#275;mur : ''maybe we were being understood'' <br>
+comprehender&#275;min&#299; : ''maybe you (all) were being understood''<br>
+comprehenderentur : ''maybe they were being understood'' <br>
