--- a/wiki/pantheon.wikitext
+++ b/wiki/pantheon.wikitext
@@ -1,4 +1,13 @@
 ==English==
+===Etymology===
+From the greek word ''pantheion'', a shrine to all the gods.
 ===Noun===
 '''pantheon'''
-#From [[Greek]], "all gods", ergo the total gods of a religion or culture.
+#The totalality of gods of a given religion or culture.
+
+===Proper Noun===
+'''Pantheon'''
+#The circular temple dedicated to all the gods in 27 BC in Rome. 
+
+===See Also===
+[[w:Pantheon|Pantheon]]
