/* Conjugation */ Perfect Subjunctive quartet & imperative. <comprehendo#65587>

--- a/wiki/comprehendo.wikitext
+++ b/wiki/comprehendo.wikitext
@@ -192,3 +192,44 @@ comprehender&#275;tur : ''maybe he/she/it was being understood'' <br>
 comprehender&#275;mur : ''maybe we were being understood'' <br>
 comprehender&#275;min&#299; : ''maybe you (all) were being understood''<br>
 comprehenderentur : ''maybe they were being understood'' <br>
+
+=====<u>''Perfect Subjunctive''</u>=====
+comprehenderim : ''I may have grasped'' <br>
+comprehender&#299;s : ''you may have grasped'' <br>
+comprehenderit : ''he/she/it may have grasped'' <br>
+:&mdash; <br>
+comprehender&#299;mus : ''we may have grasped'' <br>
+comprehender&#299;tis : ''you (all) may have grasped'' <br>
+comprehenderint : ''they may have grasped'' <br>
+
+=====<u>''Pluperfect Subjunctive''</u>=====
+comprehendissem : ''maybe I had grasped'' <br>
+comprehendiss&#275;s : ''maybe you had grasped'' <br>
+comprehendisset : ''maybe he/she/it had grasped'' <br>
+:&mdash; <br>
+comprehendiss&#275;mus : ''maybe we had grasped'' <br>
+comprehendiss&#275;tis : ''maybe you (all) had grasped'' <br>
+comprehendissent : ''maybe they had grasped'' <br>
+
+=====<u>''Perfect Subjunctive Passive''</u>=====
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum sim : ''I may have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum s&#299;s : ''you may have been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum sit : ''he/she/it may have been understood'' <br>
+:&mdash; <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa s&#299;mus : ''we may have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa s&#299;tis : ''you (all) may have been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa sint : ''they may have been understood'' <br>
+
+=====<u>''Pluperfect Subjunctive Passive''</u>=====
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum essem : ''maybe I had been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum ess&#275;s : ''maybe you had been understood'' <br>
+compreh&#275;nsus/compreh&#275;nsa/compreh&#275;nsum esset : ''maybe he/she/it had been understood'' <br>
+:&mdash; <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa ess&#275;mus : ''maybe we had been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa ess&#275;tis : ''maybe you (all) had been understood'' <br>
+compreh&#275;ns&#299;/compreh&#275;nsae/compreh&#275;nsa essent : ''maybe they had been understood'' <br>
+
+=====<u>''Imperative''</u>=====
+(t&#363;) comprehende : ''(you) pray grasp'' <br>
+:&mdash; <br>
+(v&#333;s) comprehendite : ''(you all) pray grasp'' <br>
