--- a/wiki/Sedna.wikitext
+++ b/wiki/Sedna.wikitext
@@ -1,1 +1,8 @@
-sedna
+==English==
+===Proper noun===
+'''Sedna'''
+# An Inuit goddess of the sea
+# A planetoid, [[w:90377 Sedna|90377 Sedna]], sometimes but not mainstreamly referred to as the tenth planet of the solar system shortly after its discovery.
+
+===See also===
+* [[w:Sedna|Sedna]] — Wikipedia
