--- a/wiki/vos.wikitext
+++ b/wiki/vos.wikitext
@@ -15,5 +15,14 @@
 *English: [[your]]
 
 ----
+==Latin==
+===Pronunciation===
+*[[AHD]]: <big> w&#335;&prime; &#335;s </big>
+
+===Pronoun===
+'''v&#333;s'''
+# [[you]] (plural)
+
+----
 ==Spanish==
 See [[vós]]
