--- a/wiki/expropriate.wikitext
+++ b/wiki/expropriate.wikitext
@@ -1,3 +1,3 @@
+==English==
 ===Verb===
-
-*To private a person or entity the right or ownership of a possession. To [[confiscate]].
+#To deprive a person of their property. To [[confiscate]]. Usually in reference to taking property for public use.
