--- a/wiki/redex.wikitext
+++ b/wiki/redex.wikitext
@@ -6,4 +6,4 @@ From "[[Red]] [[X]]"
 ===Verb===
 '''redex'''
 
-#(''internet'') of an image, to display a red X rather than the intended image; to fail to load
+#(''Internet'') of an image, to display a red X rather than the intended image; to fail to load
