--- a/wiki/watchdog.wikitext
+++ b/wiki/watchdog.wikitext
@@ -1,2 +1,4 @@
+==English==
+===Noun===
 #a guard dog
-#a person who monitors the behavior of others (individuals, corporations, governments)to be aware of unscrupulous activity.
+#a person or organization that monitors the behavior of others (individuals, corporations, governments) to discover unscrupulous activity.
