--- a/wiki/theocracy.wikitext
+++ b/wiki/theocracy.wikitext
@@ -4,5 +4,5 @@
 
 '''theocracy'''
 
-1# [[Government]] under the control of a Church or state-sponsored religion.<P>
+1.[[Government]] under the control of a Church or state-sponsored religion.<P>
 2.Rule by [[God]]
