+formal system sense.  Need to add etym and pron (left comment to that effect) <redex#65560>

--- a/wiki/redex.wikitext
+++ b/wiki/redex.wikitext
@@ -7,3 +7,11 @@ From "[[Red]] [[X]]"
 '''redex'''
 
 #(''Internet'') of an image, to display a red X rather than the intended image; to fail to load
+
+===Noun===
+'''redex''' <!-- Note: Different etym and pron. -->
+
+#(''mathematics'') Something to be [[reduce]]d according to the rules of a formal system.
+
+===See Also===
+* [[lambda calculus]]
