--- a/wiki/mattock.wikitext
+++ b/wiki/mattock.wikitext
@@ -1,8 +1,11 @@
 ===Noun===
 '''mattock''' ([[mattocks]])
 
+#an agricultural tool similar to a [[mining pick]]
+
 ====Translations====
 *Chinese: [[鶴嘴鋤]], [[鹤嘴锄]]
-*German: Mattock ''m''
+*Dutch: [[hak]]
+*German: Mattock ''m'', [[Hacke]]
 *Greek: [[αξίνα]] ''f''
 *Spanish: [[zapapico]] ''m''
