--- a/wiki/galvanization.wikitext
+++ b/wiki/galvanization.wikitext
@@ -5,3 +5,7 @@
 '''galvanization'''
 
 #The act of process of galvanizing.
+
+====Translations====
+* Catalan: [[galvanització]]
+* German: [[Galvanisierung]]
