--- a/wiki/fanfare.wikitext
+++ b/wiki/fanfare.wikitext
@@ -5,3 +5,8 @@
 '''fanfare'''
 
 #A flourish of trumpets, as in coming into the lists, etc.; also, a short and lively air performed on hunting horns during the chase.
+
+====Translations====
+*Dutch: fanfare, [[fanfarekorps]]
+*German: [[Fanfare]]
+*Portuguese:  [[charanga]], [[fanfarra]]
