--- a/wiki/sandcastle.wikitext
+++ b/wiki/sandcastle.wikitext
@@ -14,6 +14,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Dutch: [[zandkasteel]] ''n''
 *French: [[château de sable]] ''m''
 *German: [[Sandburg]] ''f''
 *Italian: [[castello di sabbia]] ''m''
