--- a/wiki/robber.wikitext
+++ b/wiki/robber.wikitext
@@ -5,6 +5,7 @@
 # one who [[robs]] a [[steals]]; a [[thief]]
 
 ====Translations====
+*Dutch: [[rover]]
 *French: [[voleur]] ''m''
 *German: [[Räuber]] ''m''
 *Spanish: [[ladrón]] ''m'', [[ladrona]] ''f''
