--- a/wiki/incense.wikitext
+++ b/wiki/incense.wikitext
@@ -10,7 +10,7 @@
 *{{es}}: [[incienso]] ''m''
 *{{fi}}: [[suitsuke]]
 *{{fr}}: [[encens]] ''m''
-*{{zh}}: [[香]], xīang
+*{{zh}}: [[香]], xīang &#151; N.B. [[w:Standard Mandarin]]
 *{{ja}}: [[お香]], o-koh
 *{{ko}}: [[향]]
 *{{pl}}: [[kadzidło]] ''n''
