Comparative and superlative of this word are standard and/or bad english <frigid#51171>

--- a/wiki/frigid.wikitext
+++ b/wiki/frigid.wikitext
@@ -5,9 +5,9 @@ From Latin [[frīgidus]] ?
 '''frig&middot;id'''
 *[[AHD]]: frĭj'ĭd
 ===Adjective===
-'''frigid''' (''[[comparative]]'': '''more frigid'''; ''[[superlative]]'': '''most frigid''')
+'''frigid'''
 #Very [[cold]], lacking warmth.
-#...
+#Sexually unresponsive, especially of a woman.
 
 ====Translations====
 ;very cold
