/* Pronunciation */ no dash immediately after prime <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Pronunciation===
-*[[AHD]]: <big> k&#335;-&#335;n-s<font style="vertical-align:+14%"><math>\overline{oo}</math></font>&prime;-<font style="vertical-align:+14%"><math>\overline{oo}</math></font>-m&#277;-r&#277; </big>
+*[[AHD]]: <big> k&#335;-&#335;n-s<font style="vertical-align:+14%"><math>\overline{oo}</math></font>&prime; <font style="vertical-align:+14%"><math>\overline{oo}</math></font>-m&#277;-r&#277; </big>
 
 ===Verb===
 ('''c&#333;ns&#363;m&#333;''', '''c&#333;ns&#363;mere''', '''c&#333;ns&#363;mps&#299;''', '''c&#333;ns&#363;mptum''')
