/* Verb */ Participles & Infinitives. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -5,3 +5,46 @@
 ===Verb===
 ('''c&#333;ns&#363;m&#333;''', '''c&#333;ns&#363;mere''', '''c&#333;ns&#363;mps&#299;''', '''c&#333;ns&#363;mptum''')
 # To use up, [[consume]].
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+| <big> c&#333;ns&#363;m&#275;ns
+|
+:&mdash;&mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|
+:&mdash;&mdash;&mdash;
+| <big> c&#333;ns&#363;mptus
+|-
+!style="background:#D0D0B0;"| ''Future''
+| <big> c&#333;ns&#363;mpt&#363;rus
+| <big> c&#333;ns&#363;mendus
+|}
+
+=====Passive Periphrastic=====
+c&#333;ns&#363;mendus/c&#333;ns&#363;menda/c&#333;ns&#363;mendum est : ''he/she/it must be used up''
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+| <big> c&#333;ns&#363;mere
+| <big> c&#333;ns&#363;m&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+| <big> cons&#363;mpsisse
+| <big> c&#333;ns&#363;mptus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+| <big> c&#333;ns&#363;mpt&#363;rus esse
+| <big> c&#333;ns&#363;ptum &#299;r&#299;
+|}
