/* Verb */ Conjugation: Present triad. <consumere#65608>

--- a/wiki/consumere.wikitext
+++ b/wiki/consumere.wikitext
@@ -48,3 +48,33 @@ c&#333;ns&#363;mendus/c&#333;ns&#363;menda/c&#333;ns&#363;mendum est : ''he/she/
 | <big> c&#333;ns&#363;mpt&#363;rus esse
 | <big> c&#333;ns&#363;ptum &#299;r&#299;
 |}
+
+====Conjugation====
+Third conjugation (3).
+
+=====<u>''Present''</u>=====
+c&#333;ns&#363;m&#333; : ''I use up'' <br>
+c&#333;ns&#363;mis : ''you use up'' <br>
+c&#333;ns&#363;mit : ''he/she/it uses up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;mimus : ''we use up'' <br>
+c&#333;ns&#363;mitis : ''you (all) use up'' <br>
+c&#333;ns&#363;munt : ''they use up''<br>
+
+=====<u>''Future''</u>=====
+c&#333;ns&#363;mam : ''I will use up'' <br>
+c&#333;ns&#363;m&#275;s : ''you will use up'' <br>
+c&#333;ns&#363;met : ''he/she/it will use up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#275;mus : ''we will use up'' <br>
+c&#333;ns&#363;m&#275;tis : ''you (all) will use up'' <br>
+c&#333;ns&#363;ment : ''they will use up'' <br>
+
+=====<u>''Imperfect''</u>=====
+c&#333;ns&#363;m&#275;bam : ''I was using up'' <br>
+c&#333;ns&#363;m&#275;b&#257;s : ''you were using up'' <br>
+c&#333;ns&#363;m&#275;bat : ''he/she/it was using up'' <br>
+:&mdash; <br>
+c&#333;ns&#363;m&#275;b&#257;mus : ''we were using up'' <br>
+c&#333;ns&#363;m&#275;b&#257;tis : ''you (all) were using up'' <br>
+c&#333;ns&#363;m&#275;bant : ''they were using up'' <br>
